--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
   // century-gothic
   font-family: sans-serif;
   font-weight: c.$primary-font-weight;
-  font-size: c.$primary-font-size;
+  font-size: c.$font-size-l;
   color: c.$dark-blue;
 
   background-image: url(./assets/background.svg);
