--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -3,12 +3,14 @@
 
 $horizontal-padding: 30px;
 $vertical-padding: 5px;
-$height: 50px - 2 * $vertical-padding;
 
 .button {
-  text-align: center;
-  padding: $vertical-padding $horizontal-padding;
   color: c.$secondary-text-color;
+
+  .text {
+    padding: $vertical-padding $horizontal-padding;
+    text-align: center;
+  }
 
   &:hover {
     cursor: pointer;
