--- a/src/containers/SupportPage/styles.module.scss
+++ b/src/containers/SupportPage/styles.module.scss
@@ -9,7 +9,7 @@ $questions-block-title-font-size: 40px;
 }
 
 .questions {
-  @media screen and (min-width: c.$phone-width-breakpoint) {
+  @media screen and (min-width: c.$phone-breakpoint) {
     width: $questions-block-width;
   }
   line-height: 22px;
@@ -22,9 +22,9 @@ $questions-block-title-font-size: 40px;
     font-size: $questions-block-title-font-size;
     line-height: $questions-block-title-font-size;
 
-    @media screen and (max-width: c.$phone-width-breakpoint) {
-      font-size: c.$phone-primary-font-size;
-      line-height: c.$phone-primary-font-size;
+    @media screen and (max-width: c.$phone-breakpoint) {
+      // font-size: c.$phone-primary-font-size;
+      // line-height: c.$phone-primary-font-size;
     }
   }
 }
@@ -34,7 +34,7 @@ $questions-block-title-font-size: 40px;
   flex-direction: row;
   justify-content: space-between;
 
-  @media screen and (min-width: c.$phone-width-breakpoint) {
+  @media screen and (min-width: c.$phone-breakpoint) {
     width: $questions-block-width;
   }
 
