--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ body {
   font-size: c.$font-size-l;
   color: c.$dark-blue;
 
-  background-image: url(./assets/background.svg);
+  background-image: url(./assets/mainBackground.svg);
   background-size: 100vw auto;
 
   overflow-x: hidden;
