--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ body {
   color: c.$dark-blue;
 
   background-image: url(./assets/mainBackground.svg);
+  background-color: #00153f;
   background-size: 100vw auto;
 
   overflow-x: hidden;
