And another stage....

--- a/src/containers/FormPage/styles.module.scss
+++ b/src/containers/FormPage/styles.module.scss
@@ -15,6 +15,10 @@
     margin-bottom: 30px;
   }
 
+  .submit-button {
+    margin-top: 20px;
+  }
+
   .end-note {
     font-size: c.$font-size-s;
     text-align: center;
