--- a/src/components/ChatInput/styles.module.scss
+++ b/src/components/ChatInput/styles.module.scss
@@ -58,7 +58,7 @@ $input-width: 820px;
     display: flex;
     flex-direction: row;
     height: 30px;
-
+    width: fit-content;
     line-height: 30px;
   }
 }
