--- a/src/components/NavigationLink/styles.module.scss
+++ b/src/components/NavigationLink/styles.module.scss
@@ -5,7 +5,9 @@
   min-width: 90px;
   max-width: 225px;
 
-  padding: 0 20px;
+  @media screen and (min-width: c.$phone-breakpoint) {
+    padding-inline: 20px;
+  }
 
   line-height: c.$header-height;
 
