--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -4,9 +4,9 @@
 $horizontal-padding: 30px;
 
 .button {
-  width: fit-content;
+  // width: fit-content;
 
-  margin: auto;
+  // margin: auto;
 
   color: c.$secondary-text-color;
 
