--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -33,7 +33,7 @@ $horizontal-padding: 30px;
     background-color: c.$gray;
   }
 
-  // &.selected {
-  //   background: linear-gradient(rgb(0 0 0/20%) 0 0);
-  // }
+  &.selected {
+    background: linear-gradient(rgb(0 0 0/20%) 0 0);
+  }
 }
